spacing fixes

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -526,7 +526,7 @@
 
     .hbr-leadspace {
         margin-bottom: 0;
-        padding-top: 72px;
+        padding-top: 80px;
         padding-bottom: 48px;
     }
 
